<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_news"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="4dp"
    android:paddingBottom="4dp"
    android:paddingRight="4dp"
    android:paddingTop="4dp"
    android:orientation="horizontal"
    tools:context="tw.com.a4040e009.a161110_midterm_exam.NewsActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:background="@color/background">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/new1_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:textStyle="normal|bold"
                android:textSize="18sp" />

            <TextView
                android:text="@string/new1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" />

            <Button
                android:text="@string/newnextpage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                android:onClick="onclickmews1"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background1">

            <TextView
                android:text="@string/new2_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textStyle="normal|bold"
                android:textSize="18sp" />

            <TextView
                android:text="@string/news2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4" />

            <Button
                android:text="@string/newnextpage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                android:onClick="onclickmews2"/>
        </LinearLayout>

        <Button
            android:text="回前頁"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button4"
            android:layout_marginTop="180dp"
            android:onClick="back"/>
    </LinearLayout>
</LinearLayout>
